--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,9 @@ ENV/
 env.bak/
 venv.bak/
 
+# Ignore sqlite3 database file
+Database/sensor_data.db
+
 # Spyder project settings
 .spyderproject
 .spyproject
