--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-dill
-Flask
-pyserial
-chart.js
--e .
+pandas==2.1.1
+numpy==1.26.0
+scikit-learn==1.3.1
+scipy==1.11.2
+dill==0.3.7
+Flask==2.3.3
+pyserial==3.5
+joblib==1.3.2
+Flask-Login==0.6.2
+Jinja2==3.1.2
+Werkzeug==2.3.7
