--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+pandas==2.1.1
+numpy==1.26.0
 scikit-learn==1.3.1
 scipy==1.11.2
 dill==0.3.7
@@ -7,3 +9,4 @@ joblib==1.3.2
 Flask-Login==0.6.2
 Jinja2==3.1.2
 Werkzeug==2.3.7
+gunicorn==21.2.0
